objects/BMCServiceDesk__Incident__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__VIP_Client__c</fullName>
        <formula>IF(BMCServiceDesk__FKClient__r.BMCServiceDesk__VIP__c, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/VIP_icon_16.png&quot;,  $Label.bmcservicedesk__vipclient, 16, 16), &apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the client is VIP.</inlineHelpText>
        <label>VIP Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WorkflowController__c</fullName>
        <description>This field will be used to initiate and control work-flows and triggers on this object.</description>
        <label>WorkflowController</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__actualDuration__c</fullName>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__actualOutageDuration__c</fullName>
        <label>Actual Outage Time (Min)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__call__c</fullName>
        <inlineHelpText>This field is automatically incremented by 1 when you choose the Increment Call Counter command of the Actions menu. This field allows you to track the number of times an incident&apos;s client has called the service desk.</inlineHelpText>
        <label>Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientEmail__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientFirstName__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the first name of the client who submitted the incident.</inlineHelpText>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientId__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Client ID of the client who submitted the incident.</inlineHelpText>
        <label>Client ID~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientLastName__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the last name of the client who is submitting the incident.</inlineHelpText>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closeDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the incident is closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__closeTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to close all tasks linked to this incident. When you have resolved the incident, you might want to close all linked tasks because these tasks are no longer required.</inlineHelpText>
        <label>Close Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__completedDate__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__contactType__c</fullName>
        <label>Incident Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8*8-Chat</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Email message</fullName>
                </value>
                <value>
                    <fullName>Email Other</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Fax, Letter, Paper form, or Memo</fullName>
                </value>
                <value>
                    <fullName>Mail Listen</fullName>
                </value>
                <value>
                    <fullName>MyIT</fullName>
                </value>
                <value>
                    <fullName>Own observation</fullName>
                </value>
                <value>
                    <fullName>Personal visit</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Walkup</fullName>
                </value>
                <value>
                    <fullName>Web request form</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>WSDL</fullName>
                </value>
                <value>
                    <fullName>IT Monitoring</fullName>
                </value>
                <value>
                    <fullName>E-Ticket</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>ACD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__dueDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the incident should be completed based on the priority&apos;s duration. If required, you can use this field to select a different due date from the calculated due date.</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__firstCallResolution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if this incident is resolved in the first telephone call made to the staff.</inlineHelpText>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__followUpDateTime__c</fullName>
        <inlineHelpText>Use this field to set the date and time at which the follow up action must be initiated. This field is enabled when you select the Follow Up field.</inlineHelpText>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__followUp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if a follow up is required for this incident after you have closed the incident.</inlineHelpText>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the incident record is no longer valid, but the record has to be retained for compliance with the records retention policy. For example, if a client has left the account, all the client&apos;s incident records would be invalid.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inc_console_detail_link__c</fullName>
        <description>To be used in Service Cloud Console</description>
        <formula>HYPERLINK(&quot;javascript:var loc = window.parent.location.href; var splittext=loc.split(&apos;/&apos;); var match = /console/.test(splittext[3]); if(match){srcUp(&apos;/apex/BMCServiceDesk__IncidentConsole?record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&apos;)}else if(loc.indexOf(&apos;/apex/RemedyforceConsole&apos;) &gt; 0){window.parent.addTab(&apos;&quot;&amp;Id&amp;&quot;&apos;,&apos;&quot;&amp;Name&amp;&quot;&apos;,&apos;Incident__c&apos;,false,&apos;&apos;,&apos;&apos;,&apos;Incident&apos;);}else{ var baseUrl = loc.substring(0,loc.lastIndexOf(&apos;/&apos;)+1);window.parent.location.href = baseUrl + &apos;&quot; &amp; Id &amp;&quot;&apos;}&quot;, Name,&quot;_self&quot;)</formula>
        <label>Incident #+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__incidentDescription__c</fullName>
        <inlineHelpText>Use this field to enter a description of the issue the client is reporting.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__incidentResolution__c</fullName>
        <inlineHelpText>Use this field to specify what has been done to resolve the incident. Provide detailed solution instructions or describe why the incident cannot be resolved if it is not possible to provide a solution or workaround.</inlineHelpText>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isServiceRequest__c</fullName>
        <formula>IF(( AND(!ISNULL( BMCServiceDesk__FKRequestDefinition__c ), !ISBLANK( BMCServiceDesk__FKRequestDefinition__c )) ) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Service Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__maximumDuration__c</fullName>
        <label>Maximum Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__openDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the incident was created.</inlineHelpText>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__outageFrom__c</fullName>
        <inlineHelpText>Use this field to select the date when the service outage begins.</inlineHelpText>
        <label>Outage Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__outageTo__c</fullName>
        <inlineHelpText>Use this field to select the date when the service outage ends.</inlineHelpText>
        <label>Outage End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__queueName__c</fullName>
        <inlineHelpText>Displays the name of the queue to which the incident was last assigned.</inlineHelpText>
        <label>Last Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__recommendedFixDateTime__c</fullName>
        <label>Recommended Fix Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__respondedDateTime__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the &quot;Actions &gt; Responded&quot; command is run. This field is used to record the date and time when the staff has communicated to the client about the issue reported by the client.</inlineHelpText>
        <label>Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__responseDateTime__c</fullName>
        <label>Response Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__shortDescription__c</fullName>
        <inlineHelpText>This field will contain value first 255 character value of description field.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__state__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__timeSpent__c</fullName>
        <inlineHelpText>This field has been deprecated and is no longer used in Remedyforce Console.</inlineHelpText>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Name_F__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.FirstName  &amp; &quot; &quot; &amp; BMCServiceDesk__FKClient__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_WD_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client WD Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Internal_Note__c</fullName>
        <inlineHelpText>Use this field to add comments/information for IT Internal use - this will NOT send any email to Client as well as anyone else(staff/ pool). You can check for comments in Action History section on Record Details.</inlineHelpText>
        <label>IT Internal Note</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All_Facilities_Tickets</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCRF_TicketType__c</field>
            <operation>equals</operation>
            <value>Facilities</value>
        </filters>
        <label>All Facilities Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMCRF_FACILTIES_STAFF</group>
            <group>BMCRF_IT_STAFF</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Finance_Tickets</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCRF_TicketType__c</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__Type__c</field>
            <operation>equals</operation>
            <value>Incident</value>
        </filters>
        <label>All Finance Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMCRF_FINANCE_STAFF</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_HR_Tickets</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCRF_TicketType__c</field>
            <operation>equals</operation>
            <value>HR</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__Type__c</field>
            <operation>equals</operation>
            <value>Incident</value>
        </filters>
        <label>All HR Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMCRF_HR_STAFF</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_IT_Open_Tickets</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCRF_TicketType__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>QUEUE ASSIGNED</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>ASSIGNED</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>PENDING</value>
        </filters>
        <label>All IT Open Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMCRF_FACILTIES_STAFF</group>
            <group>BMCRF_IT_STAFF</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMCRF_dg_pool_Incident</fullName>
        <filterScope>Queue</filterScope>
        <label>dg-pool</label>
        <queue>BMCRF_dg_pool</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__Type__c</columns>
        <columns>BMCServiceDesk__incidentDescription__c</columns>
        <columns>BMCServiceDesk__FKClient__c</columns>
        <columns>BMCServiceDesk__Client_Name__c</columns>
        <columns>BMCServiceDesk__Client_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>QUEUE ASSIGNED</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>PENDING</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>ASSIGNED</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>RESOLVED</value>
        </filters>
        <filters>
            <field>BMCRF_TicketType__c</field>
            <operation>notEqual</operation>
            <value>HR</value>
        </filters>
        <filters>
            <field>BMCRF_TicketType__c</field>
            <operation>notEqual</operation>
            <value>Finance</value>
        </filters>
        <filters>
            <field>BMCRF_Queue__c</field>
            <operation>notEqual</operation>
            <value>automation-pool</value>
        </filters>
        <filters>
            <field>BMCRF_Queue__c</field>
            <operation>notEqual</operation>
            <value>master-pool</value>
        </filters>
        <label>All Open and Resolved</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMCRF_FACILTIES_STAFF</group>
            <group>BMCRF_IT_STAFF</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__Approved_Service_Request_View</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__incidentDescription__c</columns>
        <columns>BMCServiceDesk__FKClient__c</columns>
        <columns>BMCServiceDesk__Client_Name__c</columns>
        <columns>BMCServiceDesk__Client_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>BMCServiceDesk__Due_Date_Progress__c</columns>
        <columns>BMCServiceDesk__New_Incident__c</columns>
        <columns>BMCServiceDesk__VIP_Client__c</columns>
        <columns>BMCServiceDesk__Approved__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>BMCServiceDesk__isServiceRequest__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SR - Approved Service Request View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COS_Support2</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>QUEUE ASSIGNED,ASSIGNED,PENDING</value>
        </filters>
        <label>COS Support</label>
        <language>en_US</language>
        <queue>BMCRF_IT_cos_pool</queue>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Desk</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCRF_Queue__c</field>
            <operation>equals</operation>
            <value>global-pool</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>Queue Assigned</value>
        </filters>
        <label>Service Desk</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>test130</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>BMCServiceDesk__FKStatus__c</field>
            <operation>equals</operation>
            <value>queue assigned,assigned,pending</value>
        </filters>
        <label>test</label>
        <language>en_US</language>
        <queue>BMCRF_dg_pool</queue>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <recordTypes>
        <fullName>BMCRF_ACD_Agent</fullName>
        <active>true</active>
        <description>Record Type for Service desk Agent for displaying ACD default.</description>
        <label>BMCRF ACD Agent</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMCRF_FACILTIES_CONSOLE</fullName>
        <active>true</active>
        <label>BMCRF FACILTIES CONSOLE</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMCRF_IT_CONSOLE</fullName>
        <active>true</active>
        <label>BMCRF IT CONSOLE</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BMCServiceDesk__Incident_Clients_Share_for_SS__c</fullName>
        <label>Incident Clients Share for SS</label>
    </sharingReasons>
    <validationRules>
        <fullName>BMCRF_Cannot_modify_if_Status_is_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE(BMCServiceDesk__Status_ID__c) = &apos;CLOSED&apos; &amp;&amp; ($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos;) &amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator Custom&apos; &amp;&amp; 
$Profile.Name &lt;&gt; &apos;System Administrator&apos; ) &amp;&amp; (Now()- priorvalue(BMCServiceDesk__closeDateTime__c))&gt;=5</errorConditionFormula>
        <errorMessage>Incident once closed can only be re-opened within 5 days of closure. Please raise a new incident.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Estimated_Completion_Date_Future</fullName>
        <active>true</active>
        <description>Estimated Completion Date should be greater than current date/time.</description>
        <errorConditionFormula>OR(AND( ISNEW(), BMCRF_HR_Estimated_End_Date__c &lt; NOW()), AND( ISCHANGED(BMCRF_HR_Estimated_End_Date__c), BMCRF_HR_Estimated_End_Date__c &lt; NOW())) &amp;&amp; ($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;rf_integration@cadence.com&apos;)</errorConditionFormula>
        <errorMessage>Please enter valid Estimated Completion Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Estimated_Completion_Date_Mandator</fullName>
        <active>true</active>
        <errorConditionFormula>(BMCRF_TicketType__c = &apos;HR&apos; || BMCRF_TicketType__c = &apos;Finance&apos;  || BMCRF_TicketType__c = &apos;IT&apos; || BMCRF_TicketType__c = &apos;Facilities&apos;) &amp;&amp; BMCServiceDesk__Status_ID__c = &apos;PENDING&apos; &amp;&amp; ISBLANK(BMCRF_HR_Estimated_End_Date__c) &amp;&amp; ($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;rf_integration@cadence.com&apos;)</errorConditionFormula>
        <errorMessage>Please provide Estimated Completion Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Outage_End_Date_Mandatory</fullName>
        <active>true</active>
        <description>On Status- Resolved, the Outage End Date should be mandatory.</description>
        <errorConditionFormula>((BMCServiceDesk__Priority_ID__c = &apos;1&apos; || BMCServiceDesk__Priority_ID__c = &apos;2&apos;) &amp;&amp; ( BMCServiceDesk__Status_ID__c = &apos;RESOLVED&apos;) &amp;&amp;  
(ISBLANK( BMCServiceDesk__outageTo__c ))  &amp;&amp; (BMCRF_TicketType__c = &apos;IT&apos;)) &amp;&amp; 
(ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Web&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Chat&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Walk-in&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;&apos;)) &amp;&amp; 
($Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator Custom&apos;) &amp;&amp;  ($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;rf_integration@cadence.com&apos;)</errorConditionFormula>
        <errorMessage>Please enter Outage End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Outage_Start_Date_Mandatory</fullName>
        <active>true</active>
        <description>The Outage Start Date should be mandatory for the Severity 1 and 2 tickets</description>
        <errorConditionFormula>(BMCServiceDesk__Priority_ID__c = &apos;1&apos; || BMCServiceDesk__Priority_ID__c = &apos;2&apos;) &amp;&amp; 
(ISBLANK( BMCServiceDesk__outageFrom__c ) )  &amp;&amp; (BMCRF_TicketType__c = &apos;IT&apos;) &amp;&amp; 
(ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Web&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Chat&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Walk-in&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;&apos;)) &amp;&amp;  
($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;rf_integration@cadence.com&apos;)</errorConditionFormula>
        <errorMessage>Please enter Outage Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_PR_mandatory_for_P1_and_P2</fullName>
        <active>true</active>
        <description>Problem Record is mandatory for Severity tickets</description>
        <errorConditionFormula>(BMCServiceDesk__Priority_ID__c = &apos;1&apos; || BMCServiceDesk__Priority_ID__c = &apos;2&apos;) &amp;&amp;
( BMCRF_RelatedPR__c &lt;&gt; True) &amp;&amp; 
( BMCServiceDesk__Status_ID__c = &apos;RESOLVED&apos;)&amp;&amp; ($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos;) &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos;</errorConditionFormula>
        <errorMessage>Please create a Problem Record for this Severity ticket or link it to an existing PR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Select_Inc_Service_Template</fullName>
        <active>true</active>
        <description>Selection of either incident template and service request template.</description>
        <errorConditionFormula>(BMCServiceDesk__Status_ID__c &lt;&gt; &apos;CLOSED&apos;) &amp;&amp;
(BMCServiceDesk__FKCategory__c &lt;&gt; null || (BMCServiceDesk__FKCategory__c = null &amp;&amp; NOT(ISNEW()))) &amp;&amp; (BMCServiceDesk__FKTemplate__c = null) &amp;&amp; (BMCServiceDesk__FKTemplate__c = null) &amp;&amp; ( BMCServiceDesk__FKRequestDefinition__c = null) &amp;&amp; 
(ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Chat&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Walk-in&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Web&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;ACD&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Email&apos;) || 
(ISPICKVAL(BMCServiceDesk__contactType__c ,&apos;E-Ticket&apos;) &amp;&amp; NOT(ISNEW()))) &amp;&amp;
(BMCServiceDesk__queueName__c &lt;&gt; &apos;automation-pool&apos; &amp;&amp; BMCServiceDesk__queueName__c &lt;&gt; &apos;master-pool&apos;) &amp;&amp;
(BMCRF_TicketType__c = &apos;IT&apos;) &amp;&amp;  (BMCServiceDesk__Category_ID__c &lt;&gt; &apos;Mobile IT Ticket&apos;)  &amp;&amp;
($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;rf_integration@cadence.com&apos;) &amp;&amp;  (NOT(ISCHANGED(BMCRF_CCList__c)) || ISCHANGED(BMCServiceDesk__FKStatus__c))</errorConditionFormula>
        <errorMessage>Please select either Template or Request Definition.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Severity_Checkbox_is_False</fullName>
        <active>true</active>
        <errorConditionFormula>(BMCServiceDesk__Priority_ID__c = &apos;1&apos; ||  BMCServiceDesk__Priority_ID__c = &apos;2&apos;) &amp;&amp; ( BMCRF_Severity_Ticket__c = FALSE) &amp;&amp; (ISCHANGED(BMCServiceDesk__Priority_ID__c)) &amp;&amp; ( $Profile.Name = &apos;Service Desk Agent&apos;)</errorConditionFormula>
        <errorMessage>Selected values of Urgency and Impact are valid only for Sev tickets.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Staff_Field_Mandatory</fullName>
        <active>true</active>
        <description>Cannot set the status to Resolved,Pending, Assigned without specifying Staff.</description>
        <errorConditionFormula>(BMCServiceDesk__Status_ID__c = &apos;RESOLVED&apos; || BMCServiceDesk__Status_ID__c = &apos;PENDING&apos; || BMCServiceDesk__Status_ID__c = &apos;ASSIGNED&apos;) &amp;&amp;  (BMCServiceDesk__FKOpenBy__c = null) &amp;&amp;
(BMCRF_TicketType__c = &apos;IT&apos; || BMCRF_TicketType__c = &apos;Facilities&apos; || BMCRF_TicketType__c = &apos;HR&apos; || BMCRF_TicketType__c = &apos;Finance&apos;) &amp;&amp; 
(ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Web&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Chat&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Walk-in&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;Email&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;ACD&apos;) || 
 ISPICKVAL( BMCServiceDesk__contactType__c , &apos;8*8-Chat&apos;) ||
ISPICKVAL(BMCServiceDesk__contactType__c ,&apos;E-Ticket&apos;) &amp;&amp; NOT(ISNEW())) &amp;&amp;
(BMCServiceDesk__queueName__c &lt;&gt; &apos;automation-pool&apos; &amp;&amp; BMCServiceDesk__queueName__c &lt;&gt; &apos;master-pool&apos;) &amp;&amp;
($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;rf_integration@cadence.com&apos;) &amp;&amp; (BMCServiceDesk__FKRequestDefinition__r.BMCServiceDesk__serviceRequestTitle__c &lt;&gt; &apos;Secure Storage Requests&apos;)</errorConditionFormula>
        <errorMessage>Cannot modify the status without specifying Staff.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCRF_Staff_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>BMCServiceDesk__Status_ID__c = &apos;RESOLVED&apos; &amp;&amp; (BMCServiceDesk__queueName__c &lt;&gt; &apos;automation-pool&apos; &amp;&amp; BMCServiceDesk__queueName__c &lt;&gt; &apos;master-pool&apos;) &amp;&amp;
($User.Username &lt;&gt; &apos;sfdc_codemigration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;remedy_integration@cadence.com&apos; &amp;&amp; $User.Username &lt;&gt;&apos;rf_integration@cadence.com&apos;) &amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator Custom&apos; &amp;&amp; 
$Profile.Name &lt;&gt; &apos;System Administrator&apos; ) &amp;&amp; (PRIORVALUE(BMCServiceDesk__Status_ID__c) &lt;&gt; &apos;CLOSED&apos;) &amp;&amp;  $User.Id &lt;&gt; BMCServiceDesk__FKOpenBy__c</errorConditionFormula>
        <errorMessage>You can only close the ticket which is assigned to you. If you want to close this ticket please change the staff name to your name.</errorMessage>
    </validationRules>
</CustomObject>